--- a/1.md
+++ b/1.md
@@ -18,8 +18,8 @@ layout: default
 
     Choose your personal  Plan？选择你的付费方案
 
-    . 免费版: 无限使用权限，只能发布开元项目
+- 免费版: 无限使用权限，只能发布开元项目
 
-    . 收费版： 允许发布闭源项目
+- 收费版： 允许发布闭源项目
 
     邮箱中点链接之后，就可以自动跳转回githubcom的页面上，同时显示
